[gd_scene load_steps=6 format=4 uid="uid://dydr3s0jd5rpu"]

[ext_resource type="PackedScene" uid="uid://b46qouyu3lx2m" path="res://scenes/windows/window_base.tscn" id="1"]
[ext_resource type="Script" uid="uid://d2ixhdwfc1nn3" path="res://scenes/windows/window_request_uploader.gd" id="2"]
[ext_resource type="Texture2D" uid="uid://l1normsy84rc" path="res://textures/icons/star2.png" id="3"]
[ext_resource type="PackedScene" uid="uid://co5icrrrwscgg" path="res://scenes/input_container.tscn" id="4"]
[ext_resource type="AudioStream" uid="uid://cnedscgai8lbp" path="res://audio/sfx/task_completed2.wav" id="5"]

[node name="WindowBase" instance=ExtResource("1")]
offset_bottom = 248.0
script = ExtResource("2")
window = "request_uploader"

[node name="Icon" parent="TitlePanel/TitleContainer" index="0"]
texture = ExtResource("3")

[node name="Title" parent="TitlePanel/TitleContainer" index="1"]
text = "Request Uploader"

[node name="MainContainer" type="VBoxContainer" parent="PanelContainer" index="0"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/separation = 10

[node name="Upload" parent="PanelContainer/MainContainer" index="0" instance=ExtResource("4")]
layout_mode = 2
default_resource = "upload_speed"
limit = -1.0

[node name="File" parent="PanelContainer/MainContainer" index="1" instance=ExtResource("4")]
layout_mode = 2
placeholder_name = "input_file"
override_connector = "square"
override_color = "white"

[node name="Progress" type="VBoxContainer" parent="PanelContainer/MainContainer" index="2"]
layout_mode = 2
mouse_filter = 2

[node name="ProgressContainer" type="HBoxContainer" parent="PanelContainer/MainContainer/Progress" index="0"]
layout_mode = 2
mouse_filter = 2

[node name="ProgressLabel" type="Label" parent="PanelContainer/MainContainer/Progress/ProgressContainer" index="0"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 20
text = "0b"

[node name="SizeLabel" type="Label" parent="PanelContainer/MainContainer/Progress/ProgressContainer" index="1"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 20
text = "5b"
horizontal_alignment = 2

[node name="ProgressBar" type="ProgressBar" parent="PanelContainer/MainContainer/Progress" index="1"]
custom_minimum_size = Vector2(0, 8)
layout_mode = 2
mouse_filter = 2
theme_type_variation = &"ProgressBarBlue"
max_value = 1.0
step = 0.001
show_percentage = false

[node name="Request" type="Control" parent="PanelContainer/MainContainer" index="3"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 2

[node name="ResourceButton" type="Button" parent="PanelContainer/MainContainer/Request" index="0"]
custom_minimum_size = Vector2(60, 60)
layout_mode = 2
offset_right = 50.0
offset_bottom = 50.0
size_flags_horizontal = 4
size_flags_vertical = 4
focus_mode = 0
mouse_filter = 2
theme_type_variation = &"ItemButton"
expand_icon = true

[node name="Icon" type="TextureRect" parent="PanelContainer/MainContainer/Request/ResourceButton" index="0"]
self_modulate = Color(0.567, 0.69465, 0.9, 1)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(20, 20)
mouse_filter = 2
texture = ExtResource("3")
expand_mode = 1

[node name="Info" type="VBoxContainer" parent="PanelContainer/MainContainer/Request" index="1"]
layout_mode = 2
offset_left = 70.0
offset_right = 313.0
offset_bottom = 60.0
size_flags_horizontal = 3
mouse_filter = 2
theme_override_constants/separation = -2
alignment = 1

[node name="Name" type="Label" parent="PanelContainer/MainContainer/Request/Info" index="0"]
layout_mode = 2
theme_override_font_sizes/font_size = 22
text = "invalid_request"

[node name="Status" type="Label" parent="PanelContainer/MainContainer/Request/Info" index="1"]
layout_mode = 2
theme_override_colors/font_color = Color(0.627451, 0.776471, 0.811765, 1)
theme_override_font_sizes/font_size = 20
text = "invalid_request_desc"

[node name="RequestProgressBar" type="ProgressBar" parent="PanelContainer/MainContainer" index="4"]
custom_minimum_size = Vector2(0, 8)
layout_mode = 2
mouse_filter = 2
theme_type_variation = &"ProgressBarBlue"
max_value = 1.0
step = 0.001
show_percentage = false

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="." index="3"]
stream = ExtResource("5")
max_distance = 1200.0
max_polyphony = 5
bus = &"Window SFX"

[connection signal="resource_set" from="PanelContainer/MainContainer/File" to="." method="_on_file_resource_set"]
